2004-06-02 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b167

	* New: Enable mod_rewrite for GeekLog

2004-06-01 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b166

	* Fix: Removed warnings in publish_xp

	* Change: Change Text "Error Messages" to "Debug Messages"

	* New: publish_xp is now available for GeekLog

2004-06-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.4-cvs-165

	* Fix: Major security issue with init.php, which allowed anybody
	  to login as any user (including admin) with no password, by 
	  emulating that Gallery was embedded.

2004-06-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b164

	* Change: Clear up some PHP_NOTICEs in the config wizard

	* Change: view_album.php - Change a dynamic sort function into 
	  a static one to save time and make debugging easier.

2004-05-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b163

	* Change: Move guid generation explicitly to album creation, and
	  photo add/delete to save processing time.

	* Change: Correct photo count on albums.php to not include albums

2004-06-01  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b162

	* Fix: Bug #959948.
	  Thanks to "darkunderdog".

2004-05-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b161

	* Change: Text spacing change in albums.php

	* Change: Extra check in canReadRecursive() to deal with a weird
	  issue that h0bbel found with an orphan.

2004-05-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b160

	* Change: GUID needs to be added to new albums on creation, otherwise
	  the RSS is generated with a blank guid field (if no photos have been
	  added to the new album)

2004-05-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b159

	* Bug 921262:  Add -trim to jpegtran rotation options to prevent
	  artifacting when images don't match the "normal" dimensions

	* Bug 852395:  If the user navigates to a new album while editing 
	  captions, throw an error and abort changes.  This *could* be adapted